# lab

./: .gitmodules  .travis.yml  README.md
.github/: main.workflow
lab-core/: Makefile  README.md  lab-core.cabal  lab-core.lock-8.0.2  lab-core.lock-8.2.2  lab-core.lock-8.4.4
lab-core/quickcheck/: Main.hs
lab-core/quickcheck/Test/Lab/Core/: Gen.hs  Property.hs
lab-core/quickcheck/Test/Lab/Core/Control/: RoundTrip.hs
lab-core/quickcheck/Test/Lab/Core/Data/: Function.hs
lab-core/src/Lab/Core/: Gen.hs  IO.hs  Main.hs  Property.hs  QuickCheck.hs
lab-core/src/Lab/Core/Control/: RoundTrip.hs
lab-core/src/Lab/Core/Control/Monad/Trans/: Writer.hs
lab-core/src/Lab/Core/Data/: Function.hs  Monoid.hs
lab-core/src/Lab/Core/QuickCheck/: TH.hs
lab-hedgehog-core/: README.md  lab-hedgehog-core.cabal  lab-hedgehog-core.lock-8.0.2  lab-hedgehog-core.lock-8.2.2  lab-hedgehog-core.lock-8.4.4
lab-hedgehog-core/src/Lab/Core/: Gen.hs  Hedgehog.hs  Main.hs  Property.hs
lab-hedgehog-core/src/Lab/Core/Control/: RoundTrip.hs
lab-hedgehog-core/src/Lab/Core/Control/Monad/Trans/: Writer.hs
lab-hedgehog-core/src/Lab/Core/Data/: Function.hs  Monoid.hs
lab-hedgehog-core/src/Lab/Core/Hedgehog/: Gen.hs  Range.hs  TH.hs
lab-hedgehog-core/test/: test.hs
lab-hedgehog-core/test/Test/Lab/Core/: Gen.hs  Property.hs
lab-hedgehog-core/test/Test/Lab/Core/Data/: Function.hs
lab-lens/: Makefile  README.md  lab-lens.cabal  lab-lens.lock-8.0.2  lab-lens.lock-8.2.2  lab-lens.lock-8.4.4
lab-lens/src/Lab/Control/: Lens.hs
