name:               lab-core
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014-2016
synopsis:           QuickCheck extensions
category:           Test
description:        QuickCheck extensions
homepage:           https://github.com/domdere/lab/issues
bug-reports:        https://github.com/domdere/lab/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/lab.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   preamble
                    ,   QuickCheck          == 2.8.*
                    ,   random              == 1.1.*
                    ,   text                == 1.2.*
                    ,   transformers        > 0.3       && <= 0.6

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Lab.Core.Control.Monad.Trans.Writer
                        Lab.Core.Control.RoundTrip
                        Lab.Core.Data.Function
                        Lab.Core.Data.Monoid
                        Lab.Core.Gen
                        Lab.Core.IO
                        Lab.Core.Main
                        Lab.Core.Property
                        Lab.Core.QuickCheck
                        Lab.Core.QuickCheck.TH

    default-extensions: NoImplicitPrelude

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   preamble
                    ,   QuickCheck          == 2.8.*
                    ,   lab-core

    default-extensions: NoImplicitPrelude
                        TemplateHaskell
