name:               lab-lens
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014-2017
synopsis:           Traversal and Fold properties
category:           Test
description:        Traversal and Fold Properties
homepage:           https://github.com/domdere/lab
bug-reports:        https://github.com/domdere/lab/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/lab.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   domdere-preamble
                    ,   lab-core
                    ,   lens                    == 4.15.*

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Lab.Control.Lens

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   domdere-preamble
                    ,   lab-core
                    ,   lab-lens

    default-extensions: NoImplicitPrelude
                        TemplateHaskell
